fixed some stuff

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.NoTitleBar">
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden"
@@ -30,7 +30,9 @@
         <activity
             android:name=".Minigame1Activity"
             android:label="@string/title_activity_minigame1"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar">
+
         </activity>
         <activity
             android:name=".DootDootActivity"
@@ -40,12 +42,14 @@
         <activity
             android:name=".MiniGame2.RollerBallActivity"
             android:label="@string/title_activity_minigame2"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar">
         </activity>
         <activity
             android:name=".MiniGame3Activity"
             android:label="@string/title_activity_minigame3"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar">
         </activity>
     </application>
 
